# basic-django

./: .gitignore  .pre-commit-config.yaml  db.sqlite3  manage.py  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js
basic_django/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
core/: admin.py  base_models.py  models.py
core/migrations/: 0001_initial.py
frontend/src/application/: index.js
frontend/src/controllers/: testing_controller.js
frontend/webpack/: webpack.config.dev.js
pages/: views.py
templates/: base.html
templates/account/: signup.html
templates/pages/: home.html
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py
