[tool.poetry]
name = "basic-django"
version = "0.1.0"
description = ""
authors = ["Rasul Kireev <rasul@builtwithdjango.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
django-allauth = "^0.50.0"
python-webpack-boilerplate = "^1.0.0"
django-widget-tweaks = "^1.4.12"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
